<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.app.dubaiculture.ui.preLogin.login.viewmodels.LoginViewModel" />
    </data>


    <ScrollView
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:scaleX="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/top_design"
            app:layout_constraintTop_toTopOf="parent"
            />


        <ImageView
            android:id="@+id/img_close"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:rotation="90"
            android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.app.dubaiculture.ui.components.customtextview.CustomTextView
            android:id="@+id/registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textColor="@color/black_200"
            android:layout_marginTop="@dimen/_45sdp"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintTop_toBottomOf="@+id/img_close"
            app:layout_constraintStart_toStartOf="@+id/img_close"
            android:layout_marginStart="@dimen/_10sdp"
            />


        <com.app.dubaiculture.ui.components.customtextview.CustomTextView
            android:id="@+id/full_name"
            android:layout_marginTop="@dimen/_30sdp"
            style="@style/TextViewRegistrationStyle"
            android:text="@string/full_name"
            app:layout_constraintTop_toBottomOf="@+id/registration"
            app:layout_constraintStart_toStartOf="@+id/registration"
            />

        <com.app.dubaiculture.ui.components.customEditText.CustomEditText
            android:id="@+id/edit_fullName"
            style="@style/EditTextStyle"
            android:imeOptions="actionNext"
            android:hint="@string/enter_full_name"
            android:drawableEnd="@drawable/username_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/full_name" />







        <com.app.dubaiculture.ui.components.customtextview.CustomTextView
            android:id="@+id/email_address"
            style="@style/TextViewRegistrationStyle"
            android:text="@string/email_address"
            app:layout_constraintTop_toBottomOf="@+id/edit_fullName"
            app:layout_constraintStart_toStartOf="@+id/edit_fullName"
            />

        <com.app.dubaiculture.ui.components.customEditText.CustomEditText
            android:id="@+id/edit_email_address"
            style="@style/EditTextStyle"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            android:drawableEnd="@drawable/message_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_address" />










        <com.app.dubaiculture.ui.components.customtextview.CustomTextView
            android:id="@+id/mob_num"
            style="@style/TextViewRegistrationStyle"
            android:text="@string/mobile_number"
            app:layout_constraintTop_toBottomOf="@+id/edit_email_address"
            app:layout_constraintStart_toStartOf="@+id/edit_email_address"
            />

        <com.app.dubaiculture.ui.components.customEditText.CustomEditText
            android:id="@+id/edit_mobile"
            android:hint="@string/enter_mobile_number"
            style="@style/EditTextStyle"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:drawableEnd="@drawable/mob_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mob_num" />





        <com.app.dubaiculture.ui.components.customtextview.CustomTextView
            android:id="@+id/password"
            style="@style/TextViewRegistrationStyle"
            android:text="@string/password"
            app:layout_constraintTop_toBottomOf="@+id/edit_mobile"
            app:layout_constraintStart_toStartOf="@+id/edit_mobile"
            />

        <com.app.dubaiculture.ui.components.customEditText.CustomEditText
            android:id="@+id/edit_pass"
            style="@style/EditTextStyle"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/key_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />







        <com.app.dubaiculture.ui.components.customtextview.CustomTextView
            android:id="@+id/confirm_pass"
            style="@style/TextViewRegistrationStyle"
            android:text="@string/confirm_password"
            app:layout_constraintTop_toBottomOf="@+id/edit_pass"
            app:layout_constraintStart_toStartOf="@+id/edit_pass"
            />

        <com.app.dubaiculture.ui.components.customEditText.CustomEditText
            android:id="@+id/edit_confirm_pass"
            style="@style/EditTextStyle"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:drawableEnd="@drawable/key_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_pass" />


        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginTop="@dimen/_25sdp"
            android:paddingStart="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="@+id/confirm_pass"
            android:text="@string/i_agree_to_the_terms_and_conditions"
            app:layout_constraintTop_toBottomOf="@+id/edit_confirm_pass"
            />

        <Button
            android:id="@+id/btn_register"
           android:background="@drawable/btn_register"
            app:layout_constraintTop_toBottomOf="@+id/checkbox"
            app:layout_constraintStart_toStartOf="@+id/edit_confirm_pass"
           app:layout_constraintEnd_toEndOf="@+id/edit_confirm_pass"
            android:text="@string/register_now"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>




        <com.app.dubaiculture.ui.components.customtextview.CustomTextView
            android:id="@+id/tv_dont_have_acct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/gray_800"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/don_t_have_an_account"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toStartOf="@+id/tv_register_now"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_25sdp"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            app:layout_constraintBottom_toBottomOf="parent"


            />
        <com.app.dubaiculture.ui.components.customtextview.CustomTextView
            android:id="@+id/tv_register_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/purple_900"
            android:textSize="@dimen/_11ssp"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/register_now"
            android:layout_marginTop="@dimen/_25sdp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_dont_have_acct"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            app:layout_constraintBottom_toBottomOf="parent"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>