<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.preLogin.password.CreatePassFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/top_design"
            app:layout_constraintTop_toTopOf="parent"
            />


        <ImageView
            android:id="@+id/img_close"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:rotation="90"
            android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.app.dubaiculture.ui.components.customtextview.CustomTextView
            android:id="@+id/create_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_password"
            android:textColor="@color/black_200"
            android:layout_marginTop="@dimen/_45sdp"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintTop_toBottomOf="@+id/img_close"
            app:layout_constraintStart_toStartOf="@+id/img_close"
            android:layout_marginStart="@dimen/_10sdp"
            />


        <com.app.dubaiculture.ui.components.customtextview.CustomTextView
            android:id="@+id/your_pass"
            android:text="@string/your_password_must_contain"
            style="@style/TextViewCreatePasswordStyle"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="@+id/create_pass"
            app:layout_constraintTop_toBottomOf="@+id/create_pass"
            />

        <com.app.dubaiculture.ui.components.customtextview.CustomTextView
            android:id="@+id/eight_character"
            android:text="@string/_8_characters_long"
            style="@style/TextViewCreatePasswordStyle"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableStart="@drawable/check_create_pass"
            android:drawablePadding="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="@+id/your_pass"
            app:layout_constraintTop_toBottomOf="@+id/your_pass"
            />


        <com.app.dubaiculture.ui.components.customtextview.CustomTextView
            android:id="@+id/upper_case"
            android:text="@string/uppercase_character"
            style="@style/TextViewCreatePasswordStyle"
            android:layout_marginTop="@dimen/_5sdp"
            android:drawableStart="@drawable/check_create_pass"
            android:drawablePadding="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="@+id/eight_character"
            app:layout_constraintTop_toBottomOf="@+id/eight_character"
            />

        <com.app.dubaiculture.ui.components.customtextview.CustomTextView
            android:id="@+id/lower_case"
            android:text="@string/lowercase_character"
            style="@style/TextViewCreatePasswordStyle"
            android:layout_marginTop="@dimen/_5sdp"
            android:drawableStart="@drawable/check_create_pass"
            android:drawablePadding="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="@+id/upper_case"
            app:layout_constraintTop_toBottomOf="@+id/upper_case"
            />
        <com.app.dubaiculture.ui.components.customtextview.CustomTextView
            android:id="@+id/special_character"
            android:text="@string/special_character"
            style="@style/TextViewCreatePasswordStyle"
            android:layout_marginTop="@dimen/_5sdp"
            android:drawableStart="@drawable/check_create_pass"
            android:drawablePadding="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="@+id/lower_case"
            app:layout_constraintTop_toBottomOf="@+id/lower_case"
            />

        <com.app.dubaiculture.ui.components.customtextview.CustomTextView
            android:id="@+id/password"
            android:layout_marginTop="@dimen/_30sdp"
            style="@style/TextViewRegistrationStyle"
            android:text="@string/password"
            app:layout_constraintTop_toBottomOf="@+id/special_character"
            app:layout_constraintStart_toStartOf="@+id/special_character"
            />

        <com.app.dubaiculture.ui.components.customEditText.CustomEditText
            android:id="@+id/edit_fullName"
            style="@style/EditTextStyle"
            android:imeOptions="actionNext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/key_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />



        <com.app.dubaiculture.ui.components.customtextview.CustomTextView
            android:id="@+id/conf_password"
            style="@style/TextViewRegistrationStyle"
            android:text="@string/confirm_password"
            app:layout_constraintTop_toBottomOf="@+id/edit_fullName"
            app:layout_constraintStart_toStartOf="@+id/edit_fullName"
            />

        <com.app.dubaiculture.ui.components.customEditText.CustomEditText
            android:id="@+id/edit_confirm_pass"
            style="@style/EditTextStyle"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:hint="@string/confirm_password"
            android:drawableEnd="@drawable/key_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/conf_password" />

        <include
            android:id="@+id/btn_setPass"
            layout="@layout/button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_20sdp"
            />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
