<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_15sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            tools:context=".ui.postLogin.nearyou.NearYouFragment">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/gray_line"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.dubaiculture.ui.components.customtextview.CustomTextView
                android:id="@+id/heading_sort"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_22sdp"
                android:text="@string/sort"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gray_line" />

            <com.dubaiculture.ui.components.customtextview.CustomTextView
                android:id="@+id/alpha"
                style="@style/TextViewRegistrationStyle"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/alphabetically"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="@+id/heading_sort"
                app:layout_constraintTop_toBottomOf="@+id/heading_sort" />

            <com.dubaiculture.ui.components.customtextview.CustomTextView
                android:id="@+id/a_to_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/sort_box_shape"
                android:elevation="1dp"
                android:gravity="center"
                android:text="@string/a_to_z"
                app:layout_constraintStart_toStartOf="@+id/alpha"
                app:layout_constraintTop_toBottomOf="@+id/alpha" />


            <com.dubaiculture.ui.components.customtextview.CustomTextView
                android:id="@+id/z_to_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/sort_box_shape"
                android:elevation="1dp"
                android:gravity="center"
                android:text="@string/z_to_a"
                app:layout_constraintBottom_toBottomOf="@+id/a_to_z"
                app:layout_constraintStart_toEndOf="@+id/a_to_z"
                app:layout_constraintTop_toTopOf="@+id/a_to_z" />


            <com.dubaiculture.ui.components.customtextview.CustomTextView
                android:id="@+id/date"
                style="@style/TextViewRegistrationStyle"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/date"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="@+id/heading_sort"
                app:layout_constraintTop_toBottomOf="@+id/a_to_z" />

            <com.dubaiculture.ui.components.customtextview.CustomTextView
                android:id="@+id/old"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/sort_box_shape"
                android:elevation="1dp"
                android:gravity="center"
                android:text="@string/oldest"
                app:layout_constraintStart_toStartOf="@+id/date"
                app:layout_constraintTop_toBottomOf="@+id/date" />


            <com.dubaiculture.ui.components.customtextview.CustomTextView
                android:id="@+id/newest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/sort_box_shape"
                android:elevation="1dp"
                android:gravity="center"
                android:text="@string/newest"
                app:layout_constraintBottom_toBottomOf="@+id/old"
                app:layout_constraintStart_toEndOf="@+id/old"
                app:layout_constraintTop_toTopOf="@+id/old" />

            <com.dubaiculture.ui.components.custombutton.CustomButton
                android:id="@+id/btn_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/btn_register"
                android:elevation="@dimen/_15sdp"
                android:foreground="@drawable/custom_ripple_border"
                android:gravity="center"
                android:text="@string/sort"
                android:textAllCaps="false"
                android:textColor="@color/white_900"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/old" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>
